--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>blanco.valueobjectkt</groupId>
 	<artifactId>blanco-valueobjectkt</artifactId>
 	<packaging>jar</packaging>
-	<version>0.0.5</version>
+	<version>0.0.6</version>
 	<name>blanco-valueobject-kt</name>
 	<url>https://igapyon.github.io/blancofw-maven2</url>
 
@@ -171,6 +171,20 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.10.3</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.google.googlejavaformat/google-java-format -->
+		<dependency>
+			<groupId>com.google.googlejavaformat</groupId>
+			<artifactId>google-java-format</artifactId>
+			<version>1.8</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.facebook/ktfmt -->
+		<dependency>
+			<groupId>com.facebook</groupId>
+			<artifactId>ktfmt</artifactId>
+			<version>0.13</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
