--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>blanco.valueobjectkt</groupId>
 	<artifactId>blanco-valueobjectkt</artifactId>
 	<packaging>jar</packaging>
-	<version>0.1.6</version>
+	<version>0.1.7</version>
 	<name>blanco-valueobject-kt</name>
 	<url>https://igapyon.github.io/blancofw-maven2</url>
 
@@ -16,7 +16,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<github.global.server>github</github.global.server>
-		<git.branchName>gh-pages-poi4</git.branchName>
+		<git.branchName>gh-pages-poi5</git.branchName>
 		<git.repositoryOwner>uedaueo</git.repositoryOwner>
 		<git.repositoryName>blancofw-maven2</git.repositoryName>
 		<git.isMerge>true</git.isMerge>
@@ -133,70 +133,6 @@
 			<version>[1.9.7,2.0)</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi</artifactId>
-			<version>4.1.2</version>
-			<!--			<version>3.13</version>-->
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi-ooxml</artifactId>
-			<version>4.1.2</version>
-			<!--			<version>3.13</version>-->
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi-ooxml-schemas</artifactId>
-			<version>4.1.2</version>
-			<!--			<version>3.13</version>-->
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad -->
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi-scratchpad</artifactId>
-			<version>4.1.2</version>
-			<!--			<version>3.13</version>-->
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.apache.xmlbeans/xmlbeans -->
-		<dependency>
-			<groupId>org.apache.xmlbeans</groupId>
-			<artifactId>xmlbeans</artifactId>
-			<version>3.1.0</version>
-			<!--			            <version>2.6.0</version>-->
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-			<version>2.10.3</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-annotations</artifactId>
-			<version>2.10.3</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/com.google.googlejavaformat/google-java-format -->
-		<dependency>
-			<groupId>com.google.googlejavaformat</groupId>
-			<artifactId>google-java-format</artifactId>
-			<version>1.8</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.facebook/ktfmt -->
-		<dependency>
-			<groupId>com.facebook</groupId>
-			<artifactId>ktfmt</artifactId>
-			<version>0.13</version>
-		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -213,7 +149,7 @@
 						<phase>generate-sources</phase>
 						<configuration>
 							<target>
-								<taskdef name="blancoanttask" classname="blanco.anttask.task.BlancoAntTaskTask" classpathref="maven.runtime.classpath">
+								<taskdef name="blancoanttask" classname="blanco.anttask.task.BlancoAntTaskTask" classpathref="maven.compile.classpath">
 								</taskdef>
 								<blancoanttask metadir="meta/program" encoding="${project.build.sourceEncoding}" />
 							</target>
@@ -228,7 +164,7 @@
 						<phase>generate-sources</phase>
 						<configuration>
 							<target>
-								<taskdef name="blancoconstants" classname="blanco.constants.task.BlancoConstantsTask" classpathref="maven.runtime.classpath">
+								<taskdef name="blancoconstants" classname="blanco.constants.task.BlancoConstantsTask" classpathref="maven.compile.classpath">
 								</taskdef>
 								<blancoconstants metadir="meta/program" encoding="${project.build.sourceEncoding}" />
 							</target>
@@ -243,7 +179,7 @@
 						<phase>generate-sources</phase>
 						<configuration>
 							<target>
-								<taskdef name="blancomessage" classname="blanco.message.task.BlancoMessageTask" classpathref="maven.runtime.classpath">
+								<taskdef name="blancomessage" classname="blanco.message.task.BlancoMessageTask" classpathref="maven.compile.classpath">
 								</taskdef>
 								<blancomessage metadir="meta/program" encoding="${project.build.sourceEncoding}" />
 							</target>
@@ -258,7 +194,7 @@
 						<phase>generate-sources</phase>
 						<configuration>
 							<target>
-								<taskdef name="blancometa2xml" classname="blanco.meta2xml.task.BlancoMeta2XmlTask" classpathref="maven.runtime.classpath">
+								<taskdef name="blancometa2xml" classname="blanco.meta2xml.task.BlancoMeta2XmlTask" classpathref="maven.compile.classpath">
 								</taskdef>
 								<blancometa2xml metadir="meta/program" encoding="${project.build.sourceEncoding}" />
 							</target>
@@ -273,7 +209,7 @@
 						<phase>generate-sources</phase>
 						<configuration>
 							<target>
-								<taskdef name="blancoresourcebundle" classname="blanco.resourcebundle.task.BlancoResourceBundleTask" classpathref="maven.runtime.classpath">
+								<taskdef name="blancoresourcebundle" classname="blanco.resourcebundle.task.BlancoResourceBundleTask" classpathref="maven.compile.classpath">
 								</taskdef>
 								<blancoresourcebundle metadir="meta/program" encoding="${project.build.sourceEncoding}" />
 							</target>
@@ -288,7 +224,7 @@
 						<phase>generate-sources</phase>
 						<configuration>
 							<target>
-								<taskdef name="blancovalueobject" classname="blanco.valueobject.task.BlancoValueObjectTask" classpathref="maven.runtime.classpath">
+								<taskdef name="blancovalueobject" classname="blanco.valueobject.task.BlancoValueObjectTask" classpathref="maven.compile.classpath">
 								</taskdef>
 								<blancovalueobject metadir="meta/program" encoding="${project.build.sourceEncoding}" />
 							</target>
@@ -303,7 +239,7 @@
 <!--						<phase>generate-test-sources</phase>-->
 <!--						<configuration>-->
 <!--							<target>-->
-<!--								<taskdef name="blancovalueobjectkt" classname="blanco.valueobject.task.BlancoValueObjectKtTask" classpathref="maven.runtime.classpath">-->
+<!--								<taskdef name="blancovalueobjectkt" classname="blanco.valueobject.task.BlancoValueObjectKtTask" classpathref="maven.compile.classpath">-->
 <!--								</taskdef>-->
 <!--								<blancovalueobject metadir="meta/objects" encoding="${project.build.sourceEncoding}" sheetType="php" tmpdir="tmpTest" targetdir="sample/blanco" targetStyle="maven" verbose="true" />-->
 <!--							</target>-->
@@ -319,6 +255,8 @@
 						<configuration>
 							<target>
 								<delete dir="tmp" />
+								<delete dir="tmpTest" />
+								<delete dir="tmpTest2" />
 								<delete dir="blanco" />
 								<delete dir="sample" />
 								<delete dir="bin" />
